# Jetson-Parkingbot

./: README.md  manual_cmd_vel_test.py  networks  parkingbot_monolithic.py  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
install/parkingbot/lib/parkingbot/: parkingbot_node
install/parkingbot/share/parkingbot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: parkingbot.launch.py
log/: latest_build
parkingbot/: vision_node.py
resource/: parkingbot
